--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "http-errors": "^2.0.0",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
+    "mongodb": "^4.6.0",
     "morgan": "~1.9.1",
     "mysql2": "^2.3.3",
     "socket.io": "^4.5.1"
